2009-10-06  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (add_generic_class): Add an instance of GenericComparer<T> for
	each instance of Comparer<T>.

	* generics.cs: Add a new test.

2009-10-04  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (add_generic_class): Only add GetGenericValueImpl wrappers
	when using full-aot.

2009-10-02  Zoltan Varga  <vargaz@gmail.com>

	* mini-sparc.c (mono_arch_emit_setret): Emit long return values using OP_LMOVE.
	(mono_arch_create_vars): Instead of allocating a stack slot by hand, allocate
	a variable to hold the stack slot used by the int<->float conversion opcodes.

	* mini-sparc.c (mono_arch_build_imt_thunk): Implement support for fail_tramp.

2009-09-30  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (add_wrappers): Add a runtime invoke wrapper which is used by
	mono_runtime_capture_context () without calling mono_runtime_invoke ().
	(can_marshal_struct): Skip structures with auto layout.

	* tramp-arm.c (GEN_TRAMP_SIZE): Increase this by 4.

2009-09-29  Zoltan Varga  <vargaz@gmail.com>

	* mini-sparc.c: Fix the handling of enums with base type long.

	* mini-sparc.c (mono_arch_output_basic_block): Fix IREM_UN_IMM.

	* mini-sparc.c (mono_arch_allocate_vars): Use mono_class_from_mono_type ()
	instead of using type->data.klass as the later doesn't work with generics.

2009-09-25  Mark Probst  <mark.probst@gmail.com>

	* method-to-ir.c, mini.h, mini-alpha.c, mini-amd64.c, mini-arm.c,
	mini-hppa.c, mini-ia64.c, mini-mips.c, mini-ppc.c, mini-s390.c,
	mini-s390x.c, mini-sparc.c, mini-x86.c: Thread.get_CurrentThread
	works differently now and we don't handle it in the JIT anymore.

	* mini.c, mini-exceptions.c, mini-posix.c, debug-debugger.c,
	debug-mini.c, tramp-amd64.c, tramp-x86.c: Changes resulting from
	the Thread class split.

2009-09-25  Zoltan Varga  <vargaz@gmail.com>

	* driver.c: Don't run tests with the obsolete treeprop optimization.
