@@ -1,3 +1,13 @@
+2009-10-09  Zoltan Varga  <vargaz@gmail.com>
+
+	* image-writer.c: Add support for emitting the image into a memory buffer.
+
+	* dwarfwriter.c: Add support for sharing one IL file between multiple images.
+
+	* aot-compiler.c: Add support for registering debug info with GDB using the
+	new JIT debugging interface in GDB 7.0. It can be turned on by setting
+	MONO_XDEBUG to 'gdb'.
+
 2009-10-06  Zoltan Varga  <vargaz@gmail.com>
 
 	* aot-compiler.c (add_generic_class): Add an instance of GenericComparer<T> for
